fix: added scrollbar-wisth:thin for fire fox

--- a/src/css/core.css
+++ b/src/css/core.css
@@ -4,6 +4,7 @@
 * {
     padding: 0px;
     margin: 0px;
+    scrollbar-width: thin;
 }
 
 *,
